<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="annuler">Annuler</string>
    <string name="nom_appli">India Rose Timer</string>
    <string name="barre_tache">Barre de tâches</string>
    <string name="caracteristique_timer">Caractèristiques Timer</string>
    <string name="caracteristique_categorie">Caractèristiques Categorie</string>
    <string name="consigne_timer">Consigne Timer</string>
    <string name="chooseColor">Choisir couleur</string>
    <string name="chrono_droit">Sens horaire</string>
    <string name="chrono_gauche">Sens anti-horaire</string>
    <string name="couleur">Couleur</string>
    <string name="couleur_principale">Couleur temps restant</string>
    <string name="couleur_secondaire">Couleur temps écoulé</string>
    <string name="delete_question">Voulez-vous supprimer ce timer ?</string>
    <string name="double_tiret">--</string>
    <string name="duree">Durée</string>
    <string name="fond">Fond</string>
    <string name="graduation_text">Graduation Texte</string>
    <string name="graduation_trait">Graduation Trait</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Nom</string>
    <string name="orientation_application">Orientation application</string>
    <string name="pause">Pause</string>
    <string name="parametre_application">Paramètre application</string>
    <string name="paysage">Paysage</string>
    <string name="portrait">Portrait</string>
    <string name="play">Lancer</string>
    <string name="representation_categorie">Représentation Categorie</string>
    <string name="selectionner_indiagram">Selectionner Indiagramme</string>
    <string name="timer">Timer</string>
    <string name="type">Type</string>
    <string name="type_vue">Type de vues</string>
    <string name="valider">Valider</string>
    <string name="new_timer">Nouveau timer</string>

</resources>