<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_application"
    android:orientation="vertical"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="15dip" >

    <RelativeLayout
        android:id="@+id/top_title"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:background="@android:color/transparent" >

        <ImageView
            android:id="@+id/logo_indiarose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_india_rose_long" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <RelativeLayout style="@style/cellule_titre" >

                <ImageView
                    android:id="@+id/logo_categorie"
                    style="@style/category_logo"
                    android:src="@drawable/caracteristiquetimer" />

                <TextView
                    style="@style/titre_category"
                    android:text="@string/parametre_application" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/gris" />

            <RelativeLayout
                android:id="@+id/orientation_application"
                style="@style/cellule_tiret" >

                <TextView
                    style="@style/nom_cellule"
                    android:text="@string/orientation_application" />

                <ImageView
                    android:id="@+id/arrow"
                    style="@style/arrow" />

                <TextView
                    android:id="@+id/tiret"
                    style="@style/value_cellule"
                    android:layout_toLeftOf="@+id/arrow"
                    android:text="@string/portrait" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/valider_application"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_white_blue"
        android:text="@string/valider"
        android:textColor="@drawable/text_selector_black_white" />

</RelativeLayout>